Соболь вроде норм. Надо добивать базовую логику, хх, вр, схемы РУ и категории.